--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 
 <head>
   <meta charset="utf-8" />
-  <!-- <link rel="icon" href="/favicon.ico" /> -->
+  <link rel="icon" href="/images/logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
+  <meta name="theme-color" content="#4d4dff" />
   <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="/logo192.png" />
   <link rel="manifest" href="/manifest.json" />
   <title>PerfectCard</title>
 </head>
