--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="manifest" href="/manifest.json" />
   <title>PerfectCard</title>
+  <base href="./">
 </head>
 
 <body class="light">
