--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="manifest" href="/manifest.json" />
   <title>PerfectCard</title>
-  <base href="./">
+  <base href="/">
   <script type="module" crossorigin src="/assets/index.94465b05.js"></script>
   <link rel="stylesheet" href="/assets/index.fc3c7687.css">
 </head>
