--- a/index.html
+++ b/index.html
@@ -3,21 +3,17 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="/assets/logo.9136c2c1.svg" />
+  <link rel="icon" href="./assets/logo.9136c2c1.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#4d4dff" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <link rel="manifest" href="/manifest.json" />
+  <meta name="description" content="Claimed to be the easiest way to create your Perfect Card 🎴" />
   <title>PerfectCard</title>
-  <base href="/">
-  <script type="module" crossorigin src="/assets/index.94465b05.js"></script>
-  <link rel="stylesheet" href="/assets/index.fc3c7687.css">
+  <script type="module" crossorigin src="./assets/index.94465b05.js"></script>
+  <link rel="stylesheet" href="./assets/index.fc3c7687.css">
 </head>
 
 <body class="light">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-    
 </body>
-
 </html>
