--- a/index.html
+++ b/index.html
@@ -6,14 +6,18 @@
   <link rel="icon" href="./assets/logo.9136c2c1.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#4d4dff" />
-  <meta name="description" content="Claimed to be the easiest way to create your Perfect Card 🎴" />
+  <meta name="description" content="Web site created using create-react-app" />
+  <link rel="manifest" href="/manifest.json" />
   <title>PerfectCard</title>
-  <script type="module" crossorigin src="./assets/index.94465b05.js"></script>
-  <link rel="stylesheet" href="./assets/index.fc3c7687.css">
+  <base href="/">
+  <script type="module" crossorigin src="./assets/index.98a2cc64.js"></script>
+  <link rel="stylesheet" href="./assets/index.d4360eb8.css">
 </head>
 
 <body class="light">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+    
 </body>
+
 </html>
