improve seo by @hadi

--- a/index.html
+++ b/index.html
@@ -2,18 +2,30 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="language" content="English">
+  <meta name="author" content="mhmdali102">
   <link rel="icon" href="/images/logo.svg" />
+  <meta name="robots" content="index, follow" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#4d4dff" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta
+    content="Perfect Card is a useful collection of css tools to generate box shadow, border radius, and basic css styles."
+    property="og:description">
+  <meta content="Perfect Card" property="og:site_name" />
+  <meta name="keywords"
+    content="box shadow generator, border radius, rounded courners, css generator, css button generator">
+  <meta content="Perfect Card | Useful CSS tool" property="og:title">
+  <meta name="title" content="Perfect Card | Useful CSS tool">
+  <meta name="description"
+    content="Perfect Card is a useful collection of css tools to generate box shadow, border radius, and basic css styles.">
   <title>PerfectCard</title>
 </head>
 
 <body class="light">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-    <script type="module" src="/src/index.jsx" ></script>
+  <script type="module" src="/src/index.jsx"></script>
 </body>
 
 </html>
